Some front tweaks xd
