# MultiTool.Frontend/Models/model/models.ts
@@ -2,5 +2,6 @@ export * from './clouds';
 export * from './coord';
 export * from './mainData';
 export * from './sys';
+export * from './vectorDto';
 export * from './weatherDto';
 export * from './wind';
