# MultiTool.Models/MultiTool.Models/VectorDto.cs
@@ -1,0 +1,10 @@
+﻿
+namespace MultiTool.Models
+{
+    public class VectorDto
+    {
+        public double x { get; set; } = 0;
+        public double y { get; set; } = 0;
+        public double z { get; set; } = 0;
+    }
+}
